@@ -41,7 +41,7 @@ implements ITControlBuilder<org.tedros.fx.control.TVRadioGroup, Property>{
 		TVRadioGroup tAnnotation = (TVRadioGroup) annotation;
 		final TConverter conv = 
 		(tAnnotation.converter().parse() && tAnnotation.converter().type()!=TConverter.class) 
-			? tAnnotation.converter().type().newInstance() 
+			? tAnnotation.converter().type().getDeclaredConstructor().newInstance() 
 			: null;
 			
 		if(conv!=null)
